--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,31 +1,60 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+.index {
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.index-search {
+  padding: 5px;
+  margin-top: 5px;
+  position: relative;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.index-search-icon {
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  right: 16px;
+  margin: auto;
+  z-index: 10;
 }
 
-.usermotto {
-  margin-top: 200px;
+.index-search-input {
+  background-color: #fff;
+  height: 20px;
+  padding: 5px 30px 5px 20px;
+  border-radius: 15px;
+  font-size: 12px;
 }
 
-
-
-.home {
-  margin: 0 20rpx;
+.group {
+  margin: 10px;
+}
+.group-item {
+  background-color: #fff;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+  margin-bottom: 16px;
+  position: relative;
 }
 
-.home button {
-  margin: 20rpx 0;
+.group-item-title {
+  font-size: 14px;
+  line-height: 28px;
+  text-align: center;
+  border-bottom: 1px solid #f3f3f3;
+  color: #999;
+}
+
+.group-item-content {
+  padding: 10px;
+}
+
+.group-item-img {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #eee;
+  vertical-align: top;
+  margin-right: 10px;
 }
